--- a/Documents/Design/Hardware/Server-Hardware.tex
+++ b/Documents/Design/Hardware/Server-Hardware.tex
@@ -4,8 +4,8 @@
 \subsection{PC Hardware}
 
 \subsubsection{Mainboard}
-The Server's main hardware component is the mainboard, a SYS9400-ECX Developer\-Ready
-Reference Platform. It's a small form\-factor, low\-power machine with the following specs:
+The Server's main hardware component is the mainboard, a SYS9400-ECX Developer-Ready Reference Platform. 
+It's a small form-factor, low-power machine with the following specs:
 
 \begin{itemize}
 	\item 1.6 GHz Intel Atom E6XX Series Processor
@@ -16,17 +16,17 @@ Reference Platform. It's a small form\-factor, low\-power machine with the follo
 		\item 2x SATA ports
 		\item Header for Solid State Drive (SSD) power
 		\item Ethernet port
-		\item 5x USB ports
+		\item 5x USB 2.0 ports
 		\item General Purpose Input/Output (GPIO) pin header
 	\end{itemize}
 \end{itemize}
 
-If for whatever reason, using this mainboard falls through, it should be noted that the
-requirements for the Server hardware concern not just specifications, but interfaces as well.
-In particular, this project requires at least Ethernet, 2 USB ports, a SATA port, and accessible
-GPIO pins.
+\subsubsection{Potential Problems}
+If for whatever reason using this mainboard falls through: 
+It should be noted that the requirements for the Server hardware concern not just specifications, but interfaces as well.
+In particular, this project requires at least Ethernet, 2 USB ports, a SATA port, and accessible GPIO pins.
 \subsubsection{Storage}
-The Server's mainboard is connected via SATA to a 40GB SSD
+The Server's mainboard is connected via SATA to a 40GB SSD.
 
 \subsubsection{Power Supply}
 An adapter rated for 12VDC @ 3A is used to connect the Server's board to mains electricity.
