--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -5,9 +5,13 @@
 
 \section{Description}
 
-The POW-R project is made of two main hardware components, the Server and the Satellites. The Server refers to the physical hardware from which the Display shall be served. It also acts as the data center for all Satellites associated to it, collecting data and administrating. The Satellites will talk over ZigBee specification to the one Zigbee module connected to the Server, and that one Zigbee module can talk to the Server over Universal Serial Bus (USB). Figure \ref{SystemOverview} shows the layout of the hardware system.
-
-
+The POW-R project is comprised of two main hardware components, the Server and the Satellites. 
+The Server refers to the physical hardware from which the Display shall be served. 
+It also acts as the data center for all Satellites associated to it, collecting data and administrating. 
+The Satellites will talk over ZigBee specification to the one Zigbee module connected to the Server. 
+That one Zigbee module can talk to the Server over Universal Serial Bus (USB).
+ 
+Figure \ref{SystemOverview} shows the layout of the hardware system.
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.3]{Hardware/images/SystemOverview.png}
@@ -21,7 +25,10 @@ The POW-R project is made of two main hardware components, the Server and the Sa
 %\input{Hardware/Server-TalkToXbee}
 
 \section{The Satellites}
-The Satellites are made up of two sets of hardware: Instruments for measuring current and voltage, and radios for communicating that data to the Server. The end product shall have a hard casing around it, NEMA 5-15 sockets on one side, and prongs for a NEMA 5-15 male end on the other. However, it should be noted that prototyping will most likely involve all of the hardware being spread out on breadboards.
+The Satellites are made up of two sets of hardware: 
+Instruments for measuring current and voltage, and radios for communicating that data to the Server. 
+The end product shall have a hard casing around it, NEMA 5-15 sockets on one side, and prongs for a NEMA 5-15 male end on the other. 
+However, it should be noted that prototyping will most likely involve all of the hardware being spread out on breadboards.
 \input{Hardware/Satellite-Circuit}
 \input{Hardware/Satellite-Hardware}
 \input{Hardware/Satellite-ZigBee}
