--- a/Documents/Design/Software/Frontend-Satellite.tex
+++ b/Documents/Design/Software/Frontend-Satellite.tex
@@ -9,6 +9,10 @@ This module describes the architecture of how the frontend will create pages tha
 
 \subsubsection{Program Flow}
 
+The Satellite Management front end consists of the Satellite Management page. 
+This page leads to a set-up wizard for syncing new Satellites with the Server. 
+The wizard walks the user through instructions 
+
 % Insert a flow chart here with a high-level look
 %  at the states this part of the system goes through
 
