--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -7,7 +7,12 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to view various pieces of data in various formats.
 
+The View Data front end is responsible for providing the user with data regarding each device and device group. 
+It will 
+
 \subsubsection{Program Flow}
+
+
 
 % Insert a flow chart here with a high-level look
 %  at the states this part of the system goes through
