--- a/Documents/Design/Software/Frontend-Devices.tex
+++ b/Documents/Design/Software/Frontend-Devices.tex
@@ -5,14 +5,24 @@
 
 \subsubsection{Description}
 
-This module describes the architecture of how the frontend will create pages that allow the user to manage devices in the system.
+This module describes the architecture of how the frontend will create pages that allow the user to manage devices in the system. 
+The Device Management front end includes the Device Management page, Add Devices page, and the Confirm Disable Device dialog. 
+
 
 \subsubsection{Program Flow}
+
+The user will be presented with the option to add, edit, or disable a device. 
+Adding a device allows the user to name the new device and associate it with a specific Satellite. 
+Editing a device allows the user to change the Satellite associated with the device. 
+The user will not have the option to edit the name of the device once it has been created in order to maintain consistant data with each device. 
+Disabling a device will remove it from 
 
 % Insert a flow chart here with a high-level look
 %  at the states this part of the system goes through
 
 \subsubsection{Data Flow}
+
+The data will be sent to the Device Management back end module through the REST API. 
 
 % Describe where data goes and comes from in this subsubsection
 % Flow charts are encouraged
